--- a/gb/24/2/1/n14171290.md
+++ b/gb/24/2/1/n14171290.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>屏东县消防局长李彬正布达 周春米：专业领军</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/02/id14171291-662901-600x400.jpg" />
-<h6>屏东县长周春米（右2）1月29日发布派令，消防局代理局长李彬正（左2）升任消防局长，秘书郑建德（右1）升任副局长，第一大队大队长陈奕（左1）则升任秘书。（屏东县政府提供）
-</h6>
+<h6>屏东县长周春米（右2）1月29日发布派令，消防局代理局长李彬正（左2）升任消防局长，秘书郑建德（右1）升任副局长，第一大队大队长陈奕（左1）则升任秘书。（屏东县政府提供）</h6>
 <hr>
 <p>【大纪元2024年02月01日讯】（大纪元记者简惠敏台湾屏东报导）屏东县长周春米1月29日发布派令，由屏东县政府消防局代理局长李彬正升任局长职务，2月1日在消防局五楼礼堂举办新任局长布达典礼，县长周春米期勉新任局长发挥专业，带领屏东消防大军，带来一番全新气象。</p>
 <p>周春米表示，感谢社会各界长久关心，李彬正局长毕业于中央警察大学53期消防系，自民国77年起就任公职，经历屏东县政府警察局消防队分队长、技士、组长及屏东县政府消防局大队长、秘书、副局长等重要职务，均能圆满达成任务，工作表现备受肯定，且十分熟稔整体消防工作，相信可为消防局带来一番新气象。</p>
@@ -13,40 +12,33 @@
 <p>李彬正升任局长后，消防局副局长一职由秘书郑建德升任。郑建德中央警察大学专修班第612期消防系、国立屏东科技大学土木工程学系硕士毕业，先后担任屏东县政府消防局大队长、秘书。消防局第一大队大队长陈奕则升任秘书，陈奕中央警官学校66期消防系、国立屏东科技大学土木工程学系硕士毕业，历任屏东县政府消防局科员、技正、副大队长、科长、大队长。</p>
 <p>责任编辑：郑桦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/1/n14107857.md#1">周春米专案报告明扬爆炸案 盼企业负起诚实责任</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/25/n14143439.md#1">就职周年 周春米：全面启动 屏东多向度发展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/13/n14157305.md#1">周春米呼吁民众出门投票 不忘推销屏东观光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/26/n14166662.md#1">聚和国际投资屏东建厂 周春米：持续积极招商</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324757.md#1">农粮署南区分署 祝贺所辖业者获伴手礼佳绩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324732.md#1">台南市政府 参访兰潭水库AI人形侦测系统</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324717.md#1">教育元宇宙平台登场 嘉市与高雄大学签署Mou</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324700.md#1">中秋烤鳗鱼正对味 欢迎全国民众来云林品尝国产鳗鱼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14324164.md#1">垦丁沙滩阳伞争议多 在地人盼权衡管理方式</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14324127.md#1">嘉市全国首创 增设午餐食育组 学校食在心安</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/16/n10061474.md#1" target="_blank">“不学ABC 能做接班人”的张玉勤</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/6/n11571997.md#1" target="_blank">他们为我们的生活带来光明（1）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/28/n11616592.md#1" target="_blank">可心：从中共建政日与纽伦堡宣判同日说起（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/5/31/n3883126.md#1" target="_blank">“1400例”闹剧出笼记</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/21/n14295180.md#1">台湾纪录片《冲天》 国军飞行员抗日纪实</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322241.md#1">美国防部前UFO专家：外星人有入侵地球计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/28/n14319491.md#1">穿越阴阳界的“走无常”怎看福祸根源? 信佛有无好处？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/31/n14321153.md#1">【未解之谜】CIA心灵部队（2）月球上的神秘身影</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/28/n14319721.md#1">马铃薯的故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14325079.md#1">【新闻欣视角】纽约总领事吓跑？中共向美示好</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/6/n14325097.md#1">【秦鹏观察】贺锦丽与川普 谁当选使美经济更好</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/4/n14324117.md#1">【中国禁闻】赖清德戳穿中共撒谎 北京无回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323549.md#1">研究首次发现“暗电子” 或有助理解超导现象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323426.md#1">纽约州长前副幕僚长孙雯被控中共代理人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323643.md#1">章子怡携女与国际影后合照 8岁醒醒不怯场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14322774.md#1">唐嫣为新戏剪掉招牌长发 新造型引两极反应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14322844.md#1">85岁“甘道夫”回归《魔戒》 盼剧组快上工</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323606.md#1">先后遭官方封杀 范冰冰与赵薇现复出信号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324971.md#1">柯文哲遭羁押 台湾音乐剧《倒垃圾》开放退票</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14323109.md#1">搭乘飞机要注意 行李箱系上这一物恐致延误</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/31/n14321266.md#1">哈佛新研究：预防主要慢性病的蔬果排行榜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/5/n14324459.md#1">衣服洗完有臭味？ 专家教你用这招除臭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/3/n14322949.md#1">为什么高个子比较可能罹患癌症？有解吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322337.md#1">肌肉是人体最大的器官 具有重要功能</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/2/1/n14171290.htm">屏东县消防局长李彬正布达 周春米：专业领军</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/2/1/n14171290.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
